improvement: add some file and tweak

--- a/deploy/config.yaml
+++ b/deploy/config.yaml
@@ -1,3 +1,4 @@
+---
 app:
   id: backend
 server:
@@ -11,9 +12,9 @@ gateway:
   swaggerFile: ./www/service.swagger.json
 database:
   enable: true
-  dsn: 
+  dsn:
   type: postgres
-  address: 0.0.0.0
+  address: db
   port: 5432
   name: backend
   user: postgres
@@ -23,7 +24,7 @@ database:
 atlas.pubsub:
   enable: false
   address: atlas.pubsub
-  port: 5555 
+  port: 5555
   publish: topic
   subscribe: topic
 atlas.authz:
@@ -46,6 +47,6 @@ internal:
   readiness: /ready
 config:
   source: deploy
-  secret.file: 
+  secret.file:
 logging:
   level: debug
