--- a/deploy/postgres-stateful.yaml
+++ b/deploy/postgres-stateful.yaml
@@ -4,7 +4,7 @@ kind: StatefulSet
 metadata:
   name: postgres
 spec:
-  serviceName: "postgres"
+  serviceName: postgres
   replicas: 2
   selector:
     matchLabels:
@@ -14,25 +14,37 @@ spec:
       labels:
         app: postgres
     spec:
+      terminationGracePeriodSeconds: 10
       containers:
         - name: postgres
           image: postgres:11.4-alpine
           env:
-            - configMapRef:
-              name: postgres-config
+            - name: POSTGRES_DB
+              value: backend
+            - name: POSTGRES_USER
+              value: postgres
+            - name: POSTGRES_PASSWORD
+              value: postgres
           ports:
             - containerPort: 5432
-              name: postgredb
+              name: postgresvc
           volumeMounts:
-            - name: postgredb
-              mountPath: /var/lib/postgresql/data
-              subPath: postgres
+            - mountPath: /var/lib/postgresql/data/pgdata
+              name: postgresvc
+              subPath: postgres-db
   volumeClaimTemplates:
     - metadata:
-      name: postgredb
-    - spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: gp2
-      resources:
-        requests:
-          storage: 3Gi
+        name: postgresvc
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        storageClassName: standard
+        resources:
+          requests:
+            storage: 1Gi
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: standard
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
